# ShoppingBasket-TDD-Kata

./: README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  example1a.cpp  example1a.h  example1b.cpp  example1b.h  example2a.cpp  example2a.h  example2b.cpp  example2b.h  exampleA.cpp  exampleA.h  exampleB.cpp  exampleB.h  exampleC.cpp  exampleC.h  exampleD.cpp  exampleD.h
cpp/test-catch2/: CMakeLists.txt  example1a.cpp  example1b.cpp  example2a.cpp  example2b.cpp  exampleATest.cpp  exampleBTest.cpp  exampleCTest.cpp  exampleDTest.cpp
csharp/ShoppingBasketDesignIdeas/: ShoppingBasketDesignIdeas.sln
csharp/ShoppingBasketDesignIdeas/ShoppingBasket1/: BasketItem.cs  ShoppingBasket.cs
csharp/ShoppingBasketDesignIdeas/ShoppingBasket1.Tests/: BasketTest.cs  Directory.Build.props  ShoppingBasket1.Tests.csproj
csharp/ShoppingBasketDesignIdeas/ShoppingBasket2/: BasketAnalysis.cs  Item.cs  ShoppingBasket.cs
csharp/ShoppingBasketDesignIdeas/ShoppingBasket2.Tests/: BasketTest.cs  ShoppingBasket2.Tests.csproj  Usings.cs
java/: pom.xml
python/: README.md  example1a.py  example1b.py  example2a.py  example2b.py  example4.py
python/src/: exampleA.py  exampleB.py  exampleC.py  exampleD.py
python/tests/: test_example1a.py  test_example1b.py  test_example2a.py  test_example2b.py  test_example4.py  test_exampleA.py  test_exampleB.py  test_exampleC.py  test_exampleD.py
typescript/: README.md  package.json
typescript/src/: exampleA.ts  exampleB.ts  exampleC.ts  exampleD.ts
typescript/tests/: exampleA.spec.ts  exampleB.spec.ts  exampleC.spec.ts  exampleD.spec.ts
(+70 files in other folders)
